--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,19 @@
     max-width: 100%;
 }
 
+body::-webkit-scrollbar {
+    width: 0.5rem;               /* width of the entire scrollbar */
+  }
+  
+  body::-webkit-scrollbar-track {
+    background:  transparent;        /* color of the tracking area */
+  }
+  
+  body::-webkit-scrollbar-thumb {
+    background-color: #8E2424;    /* color of the scroll thumb */
+    border-radius: 20px;       /* roundness of the scroll thumb */
+  }
+
 body{
     font-family: 'Inter', sans-serif;
 }
@@ -21,6 +34,8 @@ header{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: fixed;
+    background-color: #ffff;
 }
 
 header .Header-container{
@@ -134,7 +149,6 @@ header .Header-container .Header-container-button a:last-child{
 
 .Valores-container{
     display: flex;
-    padding-bottom: 6rem;
     flex-direction: column;
     align-items: center;
     gap: 4rem;
@@ -201,3 +215,331 @@ header .Header-container .Header-container-button a:last-child{
 
 
 /***************** Valores Fim****************/
+
+/***************** Vagas ****************/
+
+.Vagas{
+    display: flex;
+    padding: 6rem 0rem;
+    flex-direction: column;
+    align-items: center;
+    gap: 4rem;
+}
+
+.Vagas .Vagas-talentos{
+    display: flex;
+    width: 80rem;
+    height: 37.625rem;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.Vagas .Vagas-talentos .Vagas-talentos-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80rem;
+    padding: 0rem 2rem;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.Vagas .Vagas-talentos .Vagas-talentos-container h2{
+    color: #8E2424;
+    text-align: center;
+    font-size: 0.875rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.25rem;
+    border-radius: 1rem;
+    background: rgba(142, 36, 36, 0.05);
+    display: flex;
+    padding: 0.25rem 0.75rem;
+}
+
+.Vagas .Vagas-talentos .Vagas-talentos-container p{
+    color: var(--Gray-900, #101828);
+    text-align: center;
+    font-size: 2.25rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 2.75rem; 
+    letter-spacing: -0.045rem;
+}
+
+.Vagas .Vagas-talentos .Vagas-talentos-container p:last-child{
+    color: var(--Gray-500, #667085);
+    text-align: center;
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.875rem;
+    padding-bottom: 3rem;
+}
+
+.Vagas .Vagas-abertas .Vagas-container{
+    display: flex;
+    padding: 0rem 2rem;
+    flex-direction: column;
+    align-items: center;
+    gap: 4rem;
+}
+.Vagas .Vagas-abertas .Vagas-container .Vagas-content{
+    display: flex;
+    width: 48rem;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 2rem;
+}
+
+.Vagas .Vagas-abertas .Vagas-container .Vagas-content p{
+    color: var(--Gray-900, #101828);
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.875rem;
+}
+
+.Vagas .Vagas-abertas .Vagas-container .Vagas-content .Vagas-abertas{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 1.5rem;
+    align-self: stretch;
+}
+
+.Vagas .Vagas-abertas .Vagas-container .Vagas-content .Vagas-abertas .Vagas-abertas-card-container{
+    display: flex;
+    padding: 1.5rem 1.5rem 1.75rem 1.5rem;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.5rem;
+    align-self: stretch;
+    border-radius: 1rem;
+    border: 1px solid var(--Gray-200, #EAECF0);
+    background: var(--Base-White, #FFF);
+}
+
+.Vagas .Vagas-abertas .Vagas-container .Vagas-content .Vagas-abertas .Vagas-abertas-card-container .Vagas-abertas-card{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 2rem;
+    align-self: stretch;
+}
+
+.Vagas .Vagas-abertas .Vagas-container .Vagas-content .Vagas-abertas .Vagas-abertas-card-container .Vagas-abertas-card h2{
+    color: var(--Gray-900, #101828);
+    font-size: 1.125rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.75rem;
+}
+
+.Vagas .Vagas-abertas .Vagas-container .Vagas-content .Vagas-abertas .Vagas-abertas-card-container .Vagas-abertas-card p,span{
+    color: var(--Gray-500, #667085);
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5rem; /* 150% */
+}
+
+.Vagas .Vagas-abertas .Vagas-container .Vagas-content .Vagas-abertas .Vagas-abertas-card-container .Vagas-abertas-card span{
+    padding-left: 1.5rem;
+}
+
+/***************** Vagas Fim****************/
+
+/***************** Depoimentos ****************/
+
+.Depoimentos{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    align-self: stretch;
+}
+
+.Depoimentos .Depoimentos-container{
+    display: flex;
+    width: 80rem;
+    padding: 0rem 2rem;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 2rem;
+}
+
+.Depoimentos .Depoimentos-container .Depoimentos-content{
+    display: flex;
+    padding: 4rem;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    align-self: stretch;
+    border-radius: 1rem;
+    background: rgba(195, 25, 25, 0.03);
+}
+
+.Depoimentos .Depoimentos-container .Depoimentos-content .Depoimentos-text{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-self: stretch;
+}
+
+.Depoimentos .Depoimentos-container .Depoimentos-content .Depoimentos-text h2{
+    color: #8E2424;
+    text-align: center;
+    font-size: 0.875rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 1.25rem; 
+}
+
+.Depoimentos .Depoimentos-container .Depoimentos-content .Depoimentos-text p{
+    color: #101828;
+    text-align: center;
+    font-size: 2.25rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 2.75rem;
+    letter-spacing: -0.045rem;
+}
+
+.Depoimentos .Depoimentos-container .Depoimentos-content .Depoimentos-desenvolvedora{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    align-self: stretch;
+}
+
+.Depoimentos .Depoimentos-container .Depoimentos-content .Depoimentos-desenvolvedora .Depoimentos-desenvolvedora-text{
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+    align-self: stretch;
+}
+
+.Depoimentos .Depoimentos-container .Depoimentos-content .Depoimentos-desenvolvedora .Depoimentos-desenvolvedora-text p{
+    color: var(--Gray-900, #101828);
+    text-align: center;
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5rem;
+}
+
+.Depoimentos .Depoimentos-container .Depoimentos-content .Depoimentos-desenvolvedora .Depoimentos-desenvolvedora-text span{
+    color: var(--Gray-500, #667085);
+    text-align: center;
+    font-size: 0.875rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.25rem;
+}
+
+
+/***************** Depoimentos Fim****************/
+
+/***************** Footer****************/
+
+footer{
+    display: flex;
+    height: 26.875rem;
+    padding: 3rem 0 0 0rem;
+    margin: 3rem 0 0 0rem;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+    align-self: stretch;
+    background: var(--Gray-50, #F9FAFB);
+}
+
+footer p{
+    color: var(--Gray-400, #98A2B3);
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5rem;
+}
+
+footer .footer-container{
+    display: flex;
+    height: 11.375rem;
+    padding: 0rem 2rem;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 2rem;
+    flex-shrink: 0;
+}
+
+footer .footer-container .footer-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2.5rem;
+    align-self: stretch;
+}
+
+footer .footer-container .footer-content .footer-text{
+    display: flex;
+    width: 48rem;
+    flex-direction: column;
+    align-items: center;
+    gap: 1.25rem;
+}
+
+footer .footer-container .footer-content .footer-text p{
+    color: var(--Gray-900, #101828);
+    text-align: center;
+    font-size: 2.25rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 2.75rem;
+    letter-spacing: -0.045rem;
+}
+
+footer .footer-container .footer-content .footer-text span{
+    color: var(--Gray-500, #667085);
+    text-align: center;
+    font-size: 1.25rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.875rem;
+}
+
+footer .footer-container .footer-content .footer-forms{
+    display: flex;
+    align-items: flex-start;
+    gap: 1rem;
+}
+
+footer .footer-container .footer-content .footer-forms input{
+    padding: 0.75rem 0.875rem 0.75rem 1rem;
+    align-items: center;
+    gap: 0.5rem;
+    align-self: stretch;
+    border-radius: 0.5rem;
+    border: 1px solid #D0D5DD;
+    background: var(--Base-White, #FFF);
+    box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+}
+
+footer .footer-container .footer-content .footer-forms button{
+    padding: 0.75rem 1.25rem;
+    gap: 0.5rem;
+    border-radius: 0.5rem;
+    border: 1px solid #8E2424;
+    background: #8E2424;
+    box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
+
+    color: var(--Base-White, #FFF);
+    font-family: Inter;
+    font-size: 0.8rem;
+    font-style: normal;
+    font-weight: 500;
+}
+
+/***************** Footer Fim****************/
